# web-searcher-for-modal

./: .gitignore  Cargo.toml
.github/: FUNDING.yml
src/: apperror.rs  main.rs  metadata.rs  ollama_search.rs  parallel_search.rs  test_utils.rs  tool_call_parser.rs
