[package]
name = "web-searcher"
version = "0.1.0"
edition = "2024"

[dependencies]
serde_with = { version = "3.18" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json", "blocking"] }
redb = { version = "4.1", features = ["uuid"] }
borsh = { version = "1.6", features = ["derive"] }
uuid = { version = "1.23", features = ["v4", "borsh", "serde"] }
thiserror = "2.0.18"
